styles/styles.css
/* ... */
main > div.section.gray-background > div.default-content-wrapper p {
  color: var(--color-black);
}

main .section.column-with-list.gray-background.columns-container li {
  display: flex;
  padding: 12px 0;
  padding-top: 0;
  margin-bottom: 0;
  border-bottom: 1px solid var(--color-primary-2);
  gap: 1rem;
  align-items: center;
  flex-direction: row-reverse;
}

main .section.navy-background,
main .block.navy-background {
  background-color: var(--color-bg-tertiary);
}

@media screen and (min-width: 576px /* breakpoint-s */) {
  main .section.navy-background.image {
    background-image: url("/icons/section-bg.svg"), linear-gradient(180deg, transparent 5rem, var(--color-primary-2) 0, var(--color-primary-2));
    background-position: top right;
    background-repeat: no-repeat;
    margin-top: -2rem;
    padding-top: 6rem;
    position: relative;
  }
}

main .section.shredded-paper-background {
  background-image: url("/images/media_1fbb3017116cabdcfddffa6fc667e77de61f301fd.png");
  background-size: cover;
  background-color: var(--color-primary-2);
  background-position-x: 50%;
  background-position-y: calc(100% - 75px);
  background-repeat: no-repeat;
}

main .section.shredded-paper-background > div:first-of-type > p > .icon {
  text-align: center;
  align-items: center;
  width: 100%;
  height: auto;
}

main .section.shredded-paper-background > div:first-of-type > p > span.icon > img {
  max-width: 100%;
  height: auto;
  width: 33%;
}

.section.blue-background,
.block.blue-background {
  background-color: var(--color-accent-1);
}

main .block.center-align * {
  text-align: center;
}

main .block.divider hr {
  margin: 2rem 0;
  border: 0.5px solid var(--color-medium-gray);
  opacity: .25;
  color: inherit;
}

main .section.narrow {
  max-width: var(--section-width);
  margin: auto;
}

main .section.orange-background {
  background-position: center center;
  background-size: auto;
  background-image: url("/content/dam/shred-it/test-images/industry/media_1c223bfaf2ff9af3f7e5858c517481772c46f1625.png");
}

main .invert-colors,
main .section.navy-background,
.block.navy-background,
main .section.blue-background,
.block.blue-background {
  --color-text: var(--color-white);
  --color-heading: var(--color-white);
  --color-link: var(--color-white);
  --color-link-hover: var(--color-white);
}

main .section.centered-text .default-content-wrapper {
  text-align: center;
}

main .centered-headings .default-content-wrapper > :is(h1, h2, h3, h4, h5, h6),
main .cards.centered-headings :is(h1, h2, h3, h4, h5, h6) {
  text-align: center;
}

main .cyan-headings {
  --color-heading: var(--color-secondary-3) !important;
}

main .blue-headings {
  --color-heading: var(--color-primary-1) !important;
}

main .navy-headings {
  --color-heading: var(--color-primary-2) !important;
}

main .white-headings {
  --color-heading: var(--color-white) !important;
}

main .list-style-orange-triangles ul {
  position: relative;
  padding: 0;
  margin: 0 0 0 1.5rem;
  list-style: none;
}

main .list-style-blue-checkmark ul {
  position: relative;
  padding: 0;
  margin: 0 0 0 1.5rem;
  list-style: none;
}

main .list-style-bullets ul {
  position: relative;
  padding: 0;
  margin: 0 0 1rem 1rem;
}

main .list-style-bullets ul li {
  list-style: disc;
  padding-bottom: 0.5rem;
}

main .list-style-checkmarks ul {
  position: relative;
  padding: 0;
  margin: 0 0 0 1.5rem;
  list-style: none;
}

main .list-style-checkmarks li::marker,
main .list-style-orange-triangles li::marker,
main .list-style-big-numbers li::marker,
main .list-style-more-space li::marker {
  content: "";
}

main ol {
  position: relative;
  padding: 0;
}

main ol li {
  list-style: decimal;
  padding-left: 0.5rem;
  padding-bottom: 0.5rem;
}

/* section with image styles */

main .section.with-image {
  display: flex;
  flex-direction: column;
  max-width: var(--section-width);
  margin: auto;
  padding: 0 24px 32px;
}

main > .section.box-shadow {
  box-shadow: 0 0 4px 0 rgb(0 0 0 / 25%);
}


/* section background image styles */
main div.section.default-teaser-section {
  background-size: cover;
  background-position: top center;
  background-image: url("/icons/SID-Resources-Center-Gray_Desktop.svg");
  background-repeat: no-repeat;
  overflow: hidden;
}

main div.hard-drive-background {
  background-size: cover;
  background-position-x: 50%;
  background-position-y: 50%;
  background-image: url("/images/media_18801dc9f2feef2abd2efd2bf6dfacd12e4469a20.png");
  background-repeat: no-repeat;
}

main div.shredded-paper-background-column {
  background-image: url("/images/sid-shreded-paper-background.png");
  background-size: cover;
  background-position-x: 50%;
  background-position-y: 25%;
}

@media screen and (min-width: 992px /* breakpoint-l */) {
    main .section.with-image {
    display: grid;
    grid-template-columns: 41.6667% 1fr;
    column-gap: 24px;
    position: relative;
    max-width: var(--section-width);
  }
}

main .section.with-image > div {
  grid-column: 2;
  padding: 0;
  margin: 0;
}

main .section.with-image > div.section-image-wrapper {
  /* padding: 0 0 0 12px; */
  padding: 0;
  width: 100%;
  margin: 0;
}

main .section.with-image > div.section-image-wrapper img {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

@media screen and (min-width: 992px /* breakpoint-l */) {
  main .section.with-image > div.section-image-wrapper img {
    max-width: 526px;
  }
}

main .section.with-image > div.section-image-wrapper:first-child {
  grid-column: 1;
}


/* blog styles */

.blog-page main .section {
  padding: 0;
}

.blog-page main .default-content-wrapper {
  padding: .9375rem 1.5rem;
  margin-left: auto;
  margin-right: auto;
}

@media screen and (min-width: 576px /* breakpoint-s */) {
  .blog-page main .default-content-wrapper {
    max-width: 540px;
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
  }
}
/* ... */

